# parallel-sudoku-solver

./: .gitignore  ALGORITHM_ANALYSIS.md  CMakeLists.txt  LICENSE  README.md
_codeql_build_dir/: CTestTestfile.cmake  performance_analysis  sudoku_solver
src/: main.cpp  performance_analysis.cpp  sudoku_solver.cpp  sudoku_solver.h
